--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/matheusraz/BackendWCCChallenge#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "elasticsearch": "^15.1.1",
     "express": "^4.16.3",
     "nodemon": "^1.18.1",
     "request": "^2.87.0"
