Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,5 @@ blocks:
           commands:
             - checkout
             - sem-version node 12
-            - echo $SEMAPHORE_GIT_TAG_NAME
-            - docker login -u matraz -p oliveira1996
-            - 'docker build -t matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME .'
-            - 'docker push matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME'
+            - ls
+            - kubectl version
