--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,3 +24,4 @@ blocks:
             - chmod +x ./kubectl
             - sudo mv ./kubectl /usr/local/bin/kubectl
             - kubectl version --client
+            - mkdir /.kube
