--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,7 @@ blocks:
           commands:
             - checkout
             - sem-version node 12
-            - docker login -u matraz -p oliveira1996
+            - cat info | docker login -u matraz --password-stdin
             - 'docker build -t matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME .'
             - 'docker push matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME'
   - name: Deliver new Version
