--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,8 +12,7 @@ blocks:
           commands:
             - checkout
             - sem-version node 12
-            - ls
-            - cat info | docker login -u matraz --password-stdin
+            - cat info | base64 -d | docker login -u matraz --password-stdin
             - 'docker build -t matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME .'
             - 'docker push matraz/wcc-back:$SEMAPHORE_GIT_TAG_NAME'
   - name: Deliver new Version
